# LCA_LLM

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
scripts/: 00_download_data.py  00b_audit_repo_and_data.py  00c_fetch_external_assets.py  00d_inspect_raw_sources.py  00e_check_stage_c_execution.py  00f_audit_openlca_local_assets.py  01_prepare_main_data.py  01b_prepare_pv_glass_extension.py  01c_parse_glass_epd_sources.py  01d_audit_glass_extension_assets.py  01e_build_pv_glass_cases.py  01f_prepare_openlca_hybrid_assets.py  01f_prepare_process_sidecar.py  02_make_splits.py  03_train_baselines.py  04_train_dense.py  05_build_hybrid.py  06_train_reranker.py  07_train_regressor.py  08_predict_all.py  08b_retrieve_process_candidates.py  08c_build_calculation_queue.py  08d_run_openlca_hybrid_calc.py  09_evaluate_all.py  10_run_ablation.py  11_run_process_extension.py  12_export_paper_tables.py  13_run_full_pipeline.py  14_run_pv_glass_case_study.py  14_run_significance.py  15_analyze_pv_glass_results.py  15_run_error_analysis.py  16_analyze_pv_glass_confusion.py  17_build_pv_glass_qualitative_cases.py  _bootstrap.py  build_aux_labeling_template.py  build_pdf_indexes.py  extract_aux_documents.py  prepare_aux_corpus.py
tests/: test_aux_corpus.py  test_dense_training.py  test_dense_zero_shot.py  test_hybrid_rrf.py  test_metrics.py  test_parsers.py  test_pipeline_orchestration.py  test_process_extension.py  test_regression_outputs.py  test_regression_training.py  test_reporting.py  test_reranker.py  test_split_reproducibility.py
(+561 files in other folders)
